--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="select">
     <select name="pubalvo" id="pubalvo" required>
         <option selected disabled>Escolha sua opção</option>
-        <option value="/index1.html">Pai/Mãe</option>
-        <option value="/index2.html">Professor</option>
+        <option value="index1.html">Pai/Mãe</option>
+        <option value="index2.html">Professor</option>
     </select>
 </div>
 
